Contracts API Integration

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <title>Noble Iron</title>
     <meta name="description" content="">
     <link rel="shortcut icon" href="assets/images/favicon.ico">
-
     <meta name="viewport" content="width=device-width">
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/styles/progress-wizard.min.css">
@@ -138,7 +137,7 @@
       <script src="app/quotes-detail/quote-details.module.js"></script>
       <script src="app/components/utils/image.zoom.directive.js"></script>
       <script src="app/components/bootstrap-ui-datetime-picker/datetime-picker.js"></script>
-      <script src="app/view-contracts/contracts.module.js"></script>
+      <script src="app/contracts/contracts.module.js"></script>
       <script src="app/requests/requests.module.js"></script>
       <script src="app/team/team.module.js"></script>
 
@@ -162,7 +161,9 @@
     <script src="app/landing/landing.constant.js"></script>
     <script src="app/quotes-detail/quote-details.constant.js"></script>
     <script src="app/jobsites/jobsites.constant.js"></script>
+    <script src="app/contracts/contracts.constant.js"></script>
     <script src="app/my-catalogue/my-catalogue.constant.js"></script>
+    <script src="app/requests/requests.constant.js"></script>
     <script src="app/search/search.constant.js"></script>
     <script src="app/equipment-reserve/equipment-reserve.constant.js"></script>
     <script src="app/components/header/header.constant.js"></script>
@@ -214,7 +215,7 @@
     <script src="app/cart/cart-payment.controller.js"></script>
     <script src="app/cart/cart-duration.controller.js"></script>
     <script src="app/cart/allow-substitution.controller.js"></script>
-    <script src="app/view-contracts/contracts.controller.js"></script>
+    <script src="app/contracts/contracts.controller.js"></script>
     <script src="app/requests/requests.controller.js"></script>
     <script src="app/team/team.controller.js"></script>
 
