--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="app/styles/style.css"> <!-- Resource style -->
     <link rel="stylesheet" type="text/css" href="../bower_components/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../bower_components/angular-busy/angular-busy.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600,800' rel='stylesheet' type='text/css'>
     <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel='stylesheet' type='text/css'/>
     <!-- endbuild -->
@@ -86,6 +87,7 @@
     <script src="../bower_components/moment/moment.js"></script>
     <script src="../bower_components/angular-moment/angular-moment.js"></script>
     <script src="../bower_components/humanize-duration/humanize-duration.js"></script>
+    <script src="../bower_components/angular-busy/angular-busy.js"></script>
 
     <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
     <!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.3/ui-bootstrap-tpls.min.js"></script> -->
@@ -233,6 +235,32 @@
 
     <!-- endbuild -->
 
+    <script type="text/ng-template" id="angular-busy.html">
+      <div class="cg-busy-default-wrapper">
+
+      <div class="cg-busy-default-sign">
+
+      <div class="cg-busy-default-spinner">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+      <div class="bar4"></div>
+      <div class="bar5"></div>
+      <div class="bar6"></div>
+      <div class="bar7"></div>
+      <div class="bar8"></div>
+      <div class="bar9"></div>
+      <div class="bar10"></div>
+      <div class="bar11"></div>
+      <div class="bar12"></div>
+      </div>
+
+      <div class="cg-busy-default-text">{{$message}}</div>
+
+      </div>
+
+      </div>
+    </script>
     <script type="text/ng-template" id="typeahead-item.html">
 
       <div class="typeahead-group-header" ng-if="match.model.firstInGroup">{{match.model.Category_Name}}</div>
