Invoice API Integration

--- a/src/index.html
+++ b/src/index.html
@@ -219,6 +219,7 @@
     <script src="app/contracts/contracts.controller.js"></script>
     <script src="app/requests/requests.controller.js"></script>
     <script src="app/team/team.controller.js"></script>
+    <script src="app/invoices/invoice-details.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
