Portal customer changes

--- a/src/index.html
+++ b/src/index.html
@@ -141,6 +141,7 @@
       <script src="app/contracts/contracts.module.js"></script>
       <script src="app/requests/requests.module.js"></script>
       <script src="app/team/team.module.js"></script>
+      <script src="app/select-customer/select-customer.module.js"></script>
 
     <!-- End Modules -->
 
@@ -173,6 +174,7 @@
     <script src="app/equipment-detail/equipment-details.constant.js"></script>
     <script src="app/board-of-directors/board-of-directors.constant.js"></script>
     <script src="app/equipment-reserve-success/equipment-reserve-success.constant.js"></script>
+    <script src="app/select-customer/select-customer.constant.js"></script>
 
 
     <script src="app/components/validation/validation.constraints.constant.js"></script>
@@ -220,6 +222,7 @@
     <script src="app/requests/requests.controller.js"></script>
     <script src="app/team/team.controller.js"></script>
     <script src="app/invoices/invoice-details.controller.js"></script>
+    <script src="app/select-customer/select-customer.controller.js"></script>
 
     <script src="app/search/search-result-list-view.directive.js"></script>
     <script src="app/search/search-result-grid-view.directive.js"></script>
