Application architecture code clean up

--- a/src/index.html
+++ b/src/index.html
@@ -99,12 +99,17 @@
 
 
     <!-- Modules -->
-      <script src="app/core/hm.core.request.interceptor.js"></script>
-      <script src="app/core/hm.core.response.interceptor.js"></script>
-      <script src="app/core/routes/routes.module.js"></script>
-      <script src="app/hm/heavy-metals.module.js"></script>
+
+      <script src="app/heavy-metals.module.js"></script>
       <script src="app/global/global.module.js"></script>
-      <script src="app/core/env/env.module.js"></script>
+      <script src="app/heavy-metals.routes.js"></script>
+      <script src="app/heavy-metals.config.js"></script>
+      <script src="app/heavy-metals.run.js"></script>
+      <script src="app/heavy-metals.env.constant.js"></script>
+
+    <script src="app/core/hm.core.request.interceptor.js"></script>
+    <script src="app/core/hm.core.response.interceptor.js"></script>
+
       <script src="app/landing/landing.module.js"></script>
       <script src="app/components/menu-aim/menu-aim.module.js"></script>
       <script src="app/activate-user/activate-user.module.js"></script>
@@ -145,9 +150,6 @@
 
     <!-- End Modules -->
 
-    <script src="app/core/env/env.constants.js"></script>
-    <script src="app/core/routes/routes.constants.js"></script>
-    <script src="app/global/global.constant.js"></script>
     <script src="app/activate-user/activate-user.constant.js"></script>
     <script src="app/user-profile/user-profile.constant.js"></script>
     <script src="app/press-releases/press-releases.constant.js"></script>
